@@ -7,6 +7,7 @@ import com.project.devtogether.member.domain.Member;
 import com.project.devtogether.member.domain.MemberRepository;
 import com.project.devtogether.project.domain.Project;
 import com.project.devtogether.project.dto.ProjectDto;
+import com.project.devtogether.project.domain.enums.SearchType;
 import com.project.devtogether.project.repository.ProjectRepository;
 import com.project.devtogether.project.domain.enums.ProjectStatus;
 import com.project.devtogether.project.dto.ProjectRegisterRequest;
@@ -17,9 +18,11 @@ import com.project.devtogether.skill.domain.ProjectSkillRepository;
 import com.project.devtogether.skill.domain.Skill;
 import com.project.devtogether.skill.domain.SkillRepository;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -50,17 +53,24 @@ public class ProjectService {
 
     @Transactional(readOnly = true)
     public List<ProjectDto> readProject(Long id) {
-        //Project project = getProjectById(id);
         return projectRepository.findProject(id);
-        //return ProjectResponse.of(project);
     }
 
     @Transactional(readOnly = true)
-    public List<ProjectResponse> readEnrollingProjects() {
-        List<Project> projects = projectRepository.findAllByStatus(ProjectStatus.ENROLLING);
-        return projects.stream()
-                .map(ProjectResponse::of)
-                .collect(Collectors.toList());
+    public Page<ProjectDto> readProjects(SearchType searchType, String searchValue, Pageable pageable
+    ) {
+        if (searchValue.isBlank() || searchValue == null) {
+            return projectRepository.findProjects(pageable);
+        }
+
+        return switch (searchType) {
+            case TITLE -> projectRepository.findProjectsByTitle(searchValue, pageable);
+            case NICKNAME -> projectRepository.findProjectsByNickName(searchValue, pageable);
+            case SKILL -> projectRepository.findProjectsBySkills(
+                            Arrays.stream(searchValue.split(" ")).toList(),
+                            pageable
+                    );
+        };
     }
 
     public ProjectResponse updateProject(Long id, ProjectUpdateRequest request) {
